Fix FluentButton not adapting text spacing (#3692)

--- a/src/Core/wwwroot/css/reboot.css
+++ b/src/Core/wwwroot/css/reboot.css
@@ -458,3 +458,7 @@ progress {
 [hidden] {
     display: none !important;
 }
+
+fluent-button::part(control) {
+    letter-spacing: inherit;
+}
